[build-system]
requires = [
    "hatchling>=1.19.0",
]
build-backend = "hatchling.build"

[project]
name = "dagster-cloud-examples"
requires-python = ">=3.9,<3.13"
version = "1.12.22"
authors = [
    { name = "Elementl", email = "hello@elementl.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster-cloud==1.12.22",
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
tests = [
    "mypy",
    "pylint",
    "pytest",
]
