[build-system]
requires = [
    "hatchling>=1.19.0",
]
build-backend = "hatchling.build"

[project]
name = "dagster-cloud"
requires-python = ">=3.9,<3.15"
version = "1.12.19"
authors = [
    { name = "Elementl", email = "support@elementl.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster==1.12.19",
    "dagster-shared==1.12.19",
    "dagster-cloud-cli==1.12.19",
    "pex>=2.1.132,<2.60.0",
    "questionary",
    "requests",
    "typer>=0.15.0",
]

[project.license]
text = "Apache-2.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://dagster.io/cloud"
GitHub = "https://github.com/dagster-io/dagster-cloud"
Changelog = "https://github.com/dagster-io/dagster-cloud/blob/main/CHANGES.md"
"Issue Tracker" = "https://github.com/dagster-io/dagster-cloud/issues"
Twitter = "https://twitter.com/dagster"
LinkedIn = "https://www.linkedin.com/showcase/dagster"
YouTube = "https://www.youtube.com/channel/UCfLnv9X8jyHTe6gJ4hVBo9Q"
Slack = "https://dagster.io/slack"
Blog = "https://dagster.io/blog"
Newsletter = "https://dagster.io/newsletter-signup"

[project.optional-dependencies]
tests = [
    "docker",
    "httpretty",
    "isort",
    "freezegun",
    "wordcloud",
    "kubernetes",
    "moto[all]",
    "mypy",
    "psutil",
    "pylint",
    "pytest",
    "types-PyYAML",
    "types-requests",
    "dbt-bigquery>=1.9.0",
    "dbt-core",
    "dbt-snowflake",
    "dbt-duckdb",
    "dagster-dbt==0.28.19",
    "dagster-k8s==0.28.19",
    "dagster-docker==0.28.19",
    "dagster-cloud-backend",
    "dagster-test",
    "dagster-cloud-test-infra",
    "dagster-cloud-dagit",
    "dagster-dg-cli==1.12.19",
    "syrupy",
]
insights = [
    "pyarrow",
]
docker = [
    "docker",
    "dagster-docker==0.28.19",
]
kubernetes = [
    "kubernetes",
    "dagster-k8s==0.28.19",
]
ecs = [
    "dagster-aws==0.28.19",
    "boto3",
]
aca = [
    "azure-identity>=1.15.0",
    "azure-mgmt-appcontainers>=3.0.0",
]
sandbox = [
    "supervisor",
]
pex = [
    "boto3",
]
serverless = [
    "boto3",
]
